--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/bpf_conformance"]
 	path = external/bpf_conformance
 	url = https://github.com/Alan-Jowett/bpf_conformance.git
+[submodule "ebpf-verifier"]
+	path = ebpf-verifier
+	url = git@github.com:vbpf/ebpf-verifier.git
